[package]
name = "solana-coverage"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LimeChain/solana-coverage.git"
readme = "README.md"
description = "Meta crate for setting stubs necessary for obtaining code coverage from an Anchor program."

[dependencies]
solana-program-stubs = "0.1.0"
